--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,5 +6,7 @@ nav:
     - Needle Valve Upgrade: JakeValve.md
     - Upgrades: Upgrades.md
     - Replacement Part Sources: ReplacementParts.md
+    - Maintenance:
+      - 'OPV Adjustment': 'OPVAdjustment.md'
 theme:
   name: 'material'
