--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,12 +3,12 @@ nav:
     - Home: README.md
     - Pulling Shots: PullingShots.md
     - mod:    
-        - Slayer Mod: SlayerMod.md
-        - Needle Valve Upgrade: JakeValve.md
-        - Upgrades: Upgrades.md
-    - Replacement Part Sources: ReplacementParts.md
+        - 'Slayer Mod': 'SlayerMod.md'
+        - 'Needle Valve Upgrade': 'JakeValve.md'
+        - 'Upgrades': 'Upgrades.md'
     - Maintenance:
       - 'OPV Adjustment': 'OPVAdjustment.md'
+      - 'Replacement Parts': 'ReplacementParts.md'
 theme:
   name: 'mkdocs'
   feature:
