--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,12 @@
 site_name: BDB Advanced Guides
 nav:
     - Home: README.md
-    - Pulling Shots: PullingShots.md
     - Modification Options:    
         - Slayer Mod: Modifications/SlayerMod.md
         - Needle Valve Upgrade: Modifications/JakeValve.md
         - Upgrades: Modifications/Upgrades.md
+    - Operation:
+        - Pulling Shots: PullingShots.md
     - Maintenance:
       - OPV Adjustment: Maintenance/OPVAdjustment.md
       - Replacement Parts: Maintenance/ReplacementParts.md
