--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,9 @@ theme:
   palette:
     primary: 'blue grey'
     accent: 'teal'
+  font:
+    text: 'Ubuntu' 
+    code: 'Ubuntu Mono' 
   feature:
       tabs: false
 
