--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,8 +20,8 @@ theme:
   font:
     text: 'Ubuntu' 
     code: 'Ubuntu Mono' 
-  #feature:
-   #   tabs: true
+  feature:
+      tabs: false
 
 plugins:
     - search
